# euclid-rs

./: README.md  index.d.ts  index.js  package.json  tsconfig.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
