[package]
name = "euclid-rs"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "euclid_rs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
euclid = { version = "0.17", features = ["serde"] }
neon = "0.1"
neon-runtime = "0.1"
